--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Examen Diego Armando</title>
-</head>
-<body>
-    <div>
-        <h1>Ejercicio para examen</h1>
-    </div>
-</body>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Examen Diego Armando</title>
+   </head>
+   <body>
+      <div>
+         <h1>Ejercicio para examen</h1>
+         <a href="paginas/pagina2.html">Página 2</a>
+         <a href="paginas/pagina3.html">Página 3</a>
+      </div>
+   </body>
 </html>
